// Vitest Snapshot v1

exports[`PasswordReset > matches snapshot in en 1`] = `
<div
  class="page auth password-reset"
>
  <h1>
    Enter your new password. 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  
  
  
  <form
    novalidate=""
  >
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Enter password
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <button>
        <svg
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6.5a9.77 9.77 0 0 1 8.82 5.5c-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12A9.77 9.77 0 0 1 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 5a2.5 2.5 0 0 1 0 5a2.5 2.5 0 0 1 0-5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5s4.5-2.02 4.5-4.5s-2.02-4.5-4.5-4.5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Re-enter password
      </label>
      
      <input
        class=""
        name="confirmation"
        tabindex="0"
        type="password"
      />
      <button>
        <svg
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6.5a9.77 9.77 0 0 1 8.82 5.5c-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12A9.77 9.77 0 0 1 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 5a2.5 2.5 0 0 1 0 5a2.5 2.5 0 0 1 0-5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5s4.5-2.02 4.5-4.5s-2.02-4.5-4.5-4.5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <!---->
      
    </div>
    <div
      class="submit"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Change Password
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  
</div>
`;

exports[`PasswordReset > matches snapshot in fr 1`] = `
<div
  class="page auth password-reset"
>
  <h1>
    Réinitialisation de votre mot de passe 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  
  
  
  <form
    novalidate=""
  >
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Nouveau mot de passe
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <button>
        <svg
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6.5a9.77 9.77 0 0 1 8.82 5.5c-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12A9.77 9.77 0 0 1 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 5a2.5 2.5 0 0 1 0 5a2.5 2.5 0 0 1 0-5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5s4.5-2.02 4.5-4.5s-2.02-4.5-4.5-4.5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Confirmation de votre nouveau mot de passe
      </label>
      
      <input
        class=""
        name="confirmation"
        tabindex="0"
        type="password"
      />
      <button>
        <svg
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6.5a9.77 9.77 0 0 1 8.82 5.5c-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12A9.77 9.77 0 0 1 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 5a2.5 2.5 0 0 1 0 5a2.5 2.5 0 0 1 0-5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5s4.5-2.02 4.5-4.5s-2.02-4.5-4.5-4.5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <!---->
      
    </div>
    <div
      class="submit"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Modifier votre mot de passe
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  
</div>
`;
